--- a/OneDrive/mission ready/level-5 missoin/Mission 1/Frontend/index.html
+++ b/OneDrive/mission ready/level-5 missoin/Mission 1/Frontend/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Suden/download (5).jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Car Image Filter</title>
   </head>
   <body>
     <div id="root"></div>
